plex/sonarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      name: sonarr
  template:
    metadata:
      labels:
        name: sonarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plex-pvc
      containers:
        - name: sonarr
          ports:
            - containerPort: 8989
          image: ghcr.io/k8s-at-home/sonarr
          volumeMounts:
            - mountPath: /config
              name: data
              subPath: sonarr/config
            - mountPath: /downloads
              name: data
              subPath: transmission/downloads/complete
            - mountPath: /tv
              name: data
              subPath: plex/data/tvshows
